Apply suggestions from code review

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1113,7 +1113,7 @@ angal.opd.secondname.txt                                                        
 angal.opd.selectadisease.txt                                                                           = Select a Disease
 angal.opd.selectapatient.txt                                                                           = Select a Patient
 angal.opd.selectaward.txt                                                                              = Select a Ward
-angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD Service.
+angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD service.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                                                  = Specifying duplicate diseases is not allowed.
 angal.opd.ward.txt                                                                                     = Ward
 angal.operation.deleteoperation.fmt.msg                                                                = Delete operation: {0}?
@@ -1579,10 +1579,10 @@ angal.ward.emailedit                                                            
 angal.ward.femaleward                                                                                  = Female Ward
 angal.ward.hasopd.col                                                                                  = Has OPD
 angal.ward.haspharmacy.col                                                                             = Has Pharmacy
-angal.ward.insertavalidbedsnumber                                                                      = Insert a valid beds number.
-angal.ward.insertavaliddoctorsnumber                                                                   = Insert a valid doctors number.
+angal.ward.insertavalidbedsnumber                                                                      = Insert a valid number of beds
+angal.ward.insertavaliddoctorsnumber                                                                   = Insert a valid number of doctors.
 angal.ward.insertavaliddurationvalue.msg                                                               = Insert a valid visit duration value.
-angal.ward.insertavalidnursesnumber                                                                    = Insert a valid nurses number.
+angal.ward.insertavalidnursesnumber                                                                    = Insert a valid number of nurses.
 angal.ward.maleward                                                                                    = Male Ward
 angal.ward.maternity.txt                                                                               = Maternity
 angal.ward.nameedit                                                                                    = Name *
