--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -216,10 +216,10 @@ angal.billbrowser.pleaseselectareport.msg                                       
 angal.billbrowser.pleaseselectonlyonebill.msg                                                          = Please select only one bill.
 angal.billbrowser.receipt.btn                                                                          = Receipt
 angal.billbrowser.receipt.btn.key                                                                      = P
+angal.billbrowser.removeapatient.tooltip                                                               = Remove a patient.
 angal.billbrowser.report                                                                               = Report
 angal.billbrowser.report.btn                                                                           = Report
 angal.billbrowser.report.btn.key                                                                       = R
-angal.billbrowser.removeapatient.tooltip                                                               = Remove a patient.
 angal.billbrowser.selectapatient.tooltip                                                               = Select a patient.
 angal.billbrowser.shortreportonlybaddebt.txt                                                           = Short Report (only BadDebt bills)
 angal.billbrowser.thebilldeleted.msg                                                                   = The bill is deleted.
@@ -307,6 +307,7 @@ angal.common.pleaseinsertacode.msg                                              
 angal.common.pleaseinsertavaliddescription.msg                                                         = Please insert a valid description.
 angal.common.pleaseselectapatient.msg                                                                  = Please select a patient.
 angal.common.pleaseselectarow.msg                                                                      = Please select a row.
+angal.common.pleaseselectaward.msg                                                                     = Please select a ward.
 angal.common.print.btn                                                                                 = Print
 angal.common.print.btn.key                                                                             = P
 angal.common.qty.txt                                                                                   = Qty
@@ -530,20 +531,20 @@ angal.groupsbrowser.title                                                       
 angal.help.pdfviewernotfound                                                                           = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
 angal.help.pdfviewernotfoundoruserguidenotfound                                                        = PDF Viewer not found or User Guide not found in the Documents folder
 angal.help.userguidenotfound                                                                           = User Guide not found in the Documents folder
+angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital                                                                                         = Open Hospital
 angal.hospital.currencycod                                                                             = Currency Code
 angal.hospital.emailaddress                                                                            = Email address
 angal.hospital.faxnumber                                                                               = Fax number
 angal.hospital.hospitalinformation.title                                                               = Hospital Information
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
-angal.hospital.visitduration.txt                                                                       = Visit duration
-angal.hospital.visitendhour.txt                                                                        = Visit end hour
-angal.hospital.visitstarthour.txt                                                                      = Visit start hour
-angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
 angal.hospital.thevisitdurationcannotbeblank.msg                                                       = The visit duration cannot be blank.
 angal.hospital.thevisitdurationmustbepositiveandlessthanthelengthofthevisitinghours.msg                = The visit duration must be postive and less than the length of the visiting hours.
 angal.hospital.thevisitinghourvaluesmustbeintherange0to24.msg                                          = The visiting hour values must be in the range of 0 to 24.
+angal.hospital.visitduration.txt                                                                       = Visit duration
+angal.hospital.visitendhour.txt                                                                        = Visit end hour
+angal.hospital.visitstarthour.txt                                                                      = Visit start hour
 angal.lab.allnegative.txt                                                                              = All negative.
 angal.lab.blood.txt                                                                                    = Blood
 angal.lab.cfs.txt                                                                                      = CFS
@@ -900,8 +901,8 @@ angal.menu.btn.newbill                                                          
 angal.menu.btn.opd                                                                                     = OPD
 angal.menu.btn.opdchart                                                                                = OPD Chart
 angal.menu.btn.operation                                                                               = Operation
-angal.menu.btn.operationtype                                                                           = Operation Type
 angal.menu.btn.operationlist                                                                           = Operation List
+angal.menu.btn.operationtype                                                                           = Operation Type
 angal.menu.btn.otherprices                                                                             = Other Prices
 angal.menu.btn.patientvaccine                                                                          = Vaccines
 angal.menu.btn.patreport                                                                               = Launch Report 
@@ -1055,6 +1056,7 @@ angal.newbill.youcannotdeletealreadysaveditems.msg                              
 angal.newbill.youcannotdeletepastpayments.msg                                                          = You cannot delete past payments.
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
+angal.opd.allwards.txt                                                                                 = All Wards
 angal.opd.attendancedate.txt                                                                           = Admittance Date
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
@@ -1097,6 +1099,7 @@ angal.opd.operation                                                             
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
+angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
 angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an admittance date.
 angal.opd.pleaseinsertavalidattendancedate.msg                                                         = Please insert a valid admittance date.
 angal.opd.pleaseinsertthepatientsage.msg                                                               = Please insert the patient's age.
@@ -1109,7 +1112,10 @@ angal.opd.referralto.txt                                                        
 angal.opd.secondname.txt                                                                               = Last Name
 angal.opd.selectadisease.txt                                                                           = Select a Disease
 angal.opd.selectapatient.txt                                                                           = Select a Patient
+angal.opd.selectaward.txt                                                                              = Select a Ward
+angal.opd.specifiedwardisnotenabledforopdservice.msg                                                   = Specified ward is not enabled for OPD service.
 angal.opd.specifyingduplicatediseasesisnotallowed.msg                                                  = Specifying duplicate diseases is not allowed.
+angal.opd.ward.txt                                                                                     = Ward
 angal.operation.deleteoperation.fmt.msg                                                                = Delete operation: {0}?
 angal.operation.editoperation.title                                                                    = Edit Operation
 angal.operation.major                                                                                  = Major
@@ -1343,6 +1349,7 @@ angal.sms.themessageislongerthencharacters.fmt.msg                              
 angal.sql.anunexpectederroroccurredpleasecheckthelogs.msg                                              = An unexpected error occurred please check the logs.
 angal.sql.constraintviolation.msg                                                                      = Constraint violation.
 angal.sql.databaseserverstoppedornetworkfailure.msg                                                    = Database server stopped or network failure.
+angal.sql.onefieldisnotcorrectlyset.msg                                                                = One field is not correctly set.
 angal.sql.operationnotpermittedprotectedelement                                                        = Operation not permitted, protected element.
 angal.sql.pleaseconsiderenablingtheenhancedsearchsettingseeadminmanualformoreinfo.msg                  = Please consider enabling the ENHANCEDSEARCH setting.\n\nSee Admin Manual for more info.
 angal.sql.problemsoccurredwithserverconnection.msg                                                     = Problems occurred with server connection.
@@ -1498,12 +1505,12 @@ angal.userbrowser.edituser.title                                                
 angal.userbrowser.group.label                                                                          = Group:
 angal.userbrowser.name.label                                                                           = Name:
 angal.userbrowser.password.label                                                                       = Password:
-angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
-angal.userbrowser.passwordsmustcontainatleastonealphabeticnumericandspecialcharacter.msg               = Password must contain at least one alphabetic, numeric, and special character.
 angal.userbrowser.passwordistoolongmaximumof72characters.msg                                           = Password is too long; maximum of 72 characters.
+angal.userbrowser.passwordmustbeatleast6characters.msg                                                 = Password must be at least 6 characters; please retry.
 angal.userbrowser.passwordmustbeatleastncharacters.fmt.msg                                             = Password must be at least {0} characters; please retry.
 angal.userbrowser.passwordsdonotmatchpleasecorrect.msg                                                 = Passwords do not match; please correct.
 angal.userbrowser.passwordsdonotmatchpleaseretry.msg                                                   = Passwords do not match; please retry.
+angal.userbrowser.passwordsmustcontainatleastonealphabeticnumericandspecialcharacter.msg               = Password must contain at least one alphabetic, numeric, and special character.
 angal.userbrowser.pleaseprovideapassword.msg                                                           = Please provide a password.
 angal.userbrowser.pleaseprovideavalidusername.msg                                                      = Please provide a valid user name.
 angal.userbrowser.pleaseprovidetheretypepassword.msg                                                   = Please provide the 'retype' password.
@@ -1565,24 +1572,26 @@ angal.visit.worksheet.title                                                     
 angal.ward.beds.col                                                                                    = Beds
 angal.ward.bedsedit                                                                                    = Number of beds *
 angal.ward.cannotdeletematernityward.msg                                                               = Cannot delete Maternity ward.
+angal.ward.cannotdeleteopdward.msg                                                                     = Cannot delete OPD ward.
 angal.ward.deleteward.fmt.msg                                                                          = Delete ward: {0}?
 angal.ward.doctors.col                                                                                 = Doctors
 angal.ward.doctorsedit                                                                                 = Number of doctors *
-angal.ward.duration.col                                                                                = Duration
 angal.ward.editward.title                                                                              = Edit Ward
 angal.ward.emailedit                                                                                   = E-mail
 angal.ward.femaleward                                                                                  = Female Ward
+angal.ward.hasopd.col                                                                                  = Has OPD
 angal.ward.haspharmacy.col                                                                             = Has Pharmacy
-angal.ward.insertavalidbedsnumber                                                                      = Insert a valid beds number.
-angal.ward.insertavaliddoctorsnumber                                                                   = Insert a valid doctors number.
-angal.ward.insertavalidnursesnumber                                                                    = Insert a valid nurses number.
+angal.ward.insertavalidbedsnumber                                                                      = Insert a valid number of beds
+angal.ward.insertavaliddoctorsnumber                                                                   = Insert a valid number of doctors.
 angal.ward.insertavaliddurationvalue.msg                                                               = Insert a valid visit duration value.
+angal.ward.insertavalidnursesnumber                                                                    = Insert a valid number of nurses.
 angal.ward.maleward                                                                                    = Male Ward
 angal.ward.maternity.txt                                                                               = Maternity
 angal.ward.nameedit                                                                                    = Name *
 angal.ward.newward.title                                                                               = New Ward
 angal.ward.nurses.col                                                                                  = Nurses
 angal.ward.nursesedit                                                                                  = Number of nurses *
+angal.ward.opd.txt                                                                                     = OPD
 angal.ward.pleasecheckinadmissionpatients.msg                                                          = Please check in admission / patients.
 angal.ward.requiredfields                                                                              = * Required fields
 angal.ward.theemailmustbevalid.msg                                                                     = The email must be valid.
@@ -1592,6 +1601,7 @@ angal.ward.thenumberofnursesmustbepositive.msg                                  
 angal.ward.theselectedwardhaspatients.fmt.msg                                                          = The selected ward has {0} patients.
 angal.ward.visitdurationedit                                                                           = Visit duration *
 angal.ward.wardbrowser.title                                                                           = Ward Browser
+angal.ward.wardwithopd                                                                                 = Ward with OPD
 angal.ward.wardwithpharmacy                                                                            = Ward with pharmacy
 angal.wardpharmacy.lotduedate.col                                                                      = Lot Due Date
 angal.wardpharmacy.lotnumber.col                                                                       = Lot No.
