--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1194,8 +1194,8 @@ angal.patient.note                                                              
 angal.patient.parenttogether                                                                           = Parents are together
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
-angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
 angal.patient.patientphoto.error.filenotfound.msg                                                      = Patient photo file was not found.
+angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
 angal.patient.patientselection.title                                                                   = Patient Selection
 angal.patient.photodeleted                                                                             = Deleted
 angal.patient.photonotdeleted                                                                          = Photo not deleted
@@ -1358,6 +1358,7 @@ angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                
 angal.sql.theselecteditemisstillusedsomewhere.msg                                                      = The selected item is still used somewhere.
 angal.stat.allIncomes                                                                                  = OH011A - Revenues, Incomes & Receivables (All)
 angal.stat.allIncomesmonth                                                                             = OH011C - Revenues, Incomes & Receivables (Month)
+angal.stat.allIncomesmonthward                                                                         = OH011D - Revenues, Incomes & Receivables (Ward\Month)
 angal.stat.allIncomespending                                                                           = OH011B - Revenues, Incomes & Receivables (Pending)
 angal.stat.april                                                                                       = April
 angal.stat.august                                                                                      = August
