--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1358,7 +1358,7 @@ angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                
 angal.sql.theselecteditemisstillusedsomewhere.msg                                                      = The selected item is still used somewhere.
 angal.stat.allIncomes                                                                                  = OH011A - Revenues, Incomes & Receivables (All)
 angal.stat.allIncomesmonth                                                                             = OH011C - Revenues, Incomes & Receivables (Month)
-angal.stat.allIncomesmonthward                                                                         = OH011D - Revenues, Incomes & Receivables (Ward\Month)
+angal.stat.allIncomesmonthward                                                                         = OH011D - Revenues, Incomes & Receivables (Ward / Month)
 angal.stat.allIncomespending                                                                           = OH011B - Revenues, Incomes & Receivables (Pending)
 angal.stat.april                                                                                       = April
 angal.stat.august                                                                                      = August
