Better admission status handling

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1017,7 +1017,7 @@ angal.newbill.list.txt                                                          
 angal.newbill.medical.btn                                                                              = Medical
 angal.newbill.medical.title                                                                            = Medical
 angal.newbill.newdescription.txt                                                                       = new description
-angal.newbill.nopricelistselectedwilbeused.fmt.msg                                                     = No pricelist selected. {0} will be used.
+angal.newbill.nopricelistselectedwillbeused.fmt.msg                                                    = No pricelist selected. {0} will be used.
 angal.newbill.operation.btn                                                                            = Operation
 angal.newbill.operation.btn.key                                                                        = O
 angal.newbill.operation.title                                                                          = Operation
@@ -1047,10 +1047,13 @@ angal.newbill.selectanoperation.txt                                             
 angal.newbill.selectapricelist.title                                                                   = Select a PriceList
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
+angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
 angal.newbill.thispatienthasapendingbill.msg                                                           = This patient has a pending bill.
 angal.newbill.thispatienthasapendingbilldoyouwanttocreateanother.msg                                   = This patient has a pending bill. Do you want to create another?
 angal.newbill.thispatienthasmorethanonependingbilldoyouwanttocreateanother.msg                         = This patient has more than one pending bill. Do you want to create another?
 angal.newbill.thispatienthasmorethanonependingbilldoyouwanttoopenthelastpendingbill.msg                = This patient has more than one pending bill. Do you want to open the last pending bill?
+angal.newbill.thispatientisadmittednowdoyouwanttolinkthisbilltothecurrentadmission.msg                 = This patient is admitted now. Do you want to link this bill to the current admission?
+angal.newbill.thispatientisnolongeradmitteddoyouwanttounlinkthisbillfromthepreviousadmission.msg       = This patient is no longer admitted. Do you want to unlink this bill from the previous admission?
 angal.newbill.topay.txt                                                                                = TO PAY
 angal.newbill.youcannotdeletealreadysaveditems.msg                                                     = You cannot delete already saved items.
 angal.newbill.youcannotdeletepastpayments.msg                                                          = You cannot delete past payments.
