Apply suggestions from code reviews

--- a/rpt/BillsReportMonthly_es.properties
+++ b/rpt/BillsReportMonthly_es.properties
@@ -12,6 +12,6 @@ Report.From = Informe desde
 
 To = a
 
-Periodical.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y créditos
+Periodic.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y créditos
 
 Month.Summary = (resumen mensual)
