--- a/rpt/BillsReportMonthly_fr.properties
+++ b/rpt/BillsReportMonthly_fr.properties
@@ -12,6 +12,6 @@ Report.From = Rapport de
 
 To = a
 
-Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
+Periodic.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
 
 Month.Summary = (resumé mensuel)
