--- a/rpt/BillsReportPending_es.properties
+++ b/rpt/BillsReportPending_es.properties
@@ -16,7 +16,7 @@ Paid = Pagado
 
 Patient = Paciente
 
-Periodical.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y créditos
+Periodic.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y créditos
 
 With.Pending.Invoices = (con facturas pendientes)
 
