--- a/rpt/BillsReportPending_fr.properties
+++ b/rpt/BillsReportPending_fr.properties
@@ -16,7 +16,7 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
+Periodic.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
 
 With.Pending.Invoices = (avec payements en cours)
 
