--- a/rpt/BillsReport_it.properties
+++ b/rpt/BillsReport_it.properties
@@ -16,7 +16,7 @@ Paid = Pagato
 
 Patient = PAZIENTE
 
-Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
+Periodic.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
 
 All.Invoices = (tutte le fatture)
 
