--- a/rpt/BillsReportPending_it.properties
+++ b/rpt/BillsReportPending_it.properties
@@ -16,7 +16,7 @@ Paid = Pagato
 
 Patient = PAZIENTE
 
-Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
+Periodic.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
 
 With.Pending.Invoices = (con fatture aperte)
 
