--- a/rpt/BillsReport_es.properties
+++ b/rpt/BillsReport_es.properties
@@ -16,7 +16,7 @@ Paid = Pagado
 
 Patient = Paciente
 
-Periodical.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y Créditos
+Periodic.Incomes.Billed.And.Receivables.Report = Listado de Ingresos Periódicos / Facturados y Créditos
 
 All.Invoices = (todas las facturas)
 
