--- a/rpt/BillsReport_fr.properties
+++ b/rpt/BillsReport_fr.properties
@@ -16,7 +16,7 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
+Periodic.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
 
 All.Invoices = (toutes les factures)
 
