--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1017,7 +1017,7 @@ angal.newbill.list.txt                                                          
 angal.newbill.medical.btn                                                                              = Medical
 angal.newbill.medical.title                                                                            = Medical
 angal.newbill.newdescription.txt                                                                       = new description
-angal.newbill.nopricelistselectedwilbeused.fmt.msg                                                     = No pricelist selected. {0} will be used.
+angal.newbill.nopricelistselectedwillbeused.fmt.msg                                                    = No pricelist selected. {0} will be used.
 angal.newbill.operation.btn                                                                            = Operation
 angal.newbill.operation.btn.key                                                                        = O
 angal.newbill.operation.title                                                                          = Operation
@@ -1047,10 +1047,13 @@ angal.newbill.selectanoperation.txt                                             
 angal.newbill.selectapricelist.title                                                                   = Select a PriceList
 angal.newbill.thedateisbeforethelastpayment.msg                                                        = The date is before the last payment.
 angal.newbill.thepricelistassociatedwiththisbillnolongerexists.msg                                     = The pricelist associated with this bill no longer exists.
+angal.newbill.thisbillwaslinkedtoapreviousadmissiondoyouwanttolinkittothecurrentadmissioninstead.msg   = This bill was linked to a previous admission. Do you want to link it to the current admission instead?
 angal.newbill.thispatienthasapendingbill.msg                                                           = This patient has a pending bill.
 angal.newbill.thispatienthasapendingbilldoyouwanttocreateanother.msg                                   = This patient has a pending bill. Do you want to create another?
 angal.newbill.thispatienthasmorethanonependingbilldoyouwanttocreateanother.msg                         = This patient has more than one pending bill. Do you want to create another?
 angal.newbill.thispatienthasmorethanonependingbilldoyouwanttoopenthelastpendingbill.msg                = This patient has more than one pending bill. Do you want to open the last pending bill?
+angal.newbill.thispatientisadmittednowdoyouwanttolinkthisbilltothecurrentadmission.msg                 = This patient is admitted now. Do you want to link this bill to the current admission?
+angal.newbill.thispatientisnolongeradmitteddoyouwanttounlinkthisbillfromthepreviousadmission.msg       = This patient is no longer admitted. Do you want to unlink this bill from the previous admission?
 angal.newbill.topay.txt                                                                                = TO PAY
 angal.newbill.youcannotdeletealreadysaveditems.msg                                                     = You cannot delete already saved items.
 angal.newbill.youcannotdeletepastpayments.msg                                                          = You cannot delete past payments.
@@ -1194,8 +1197,8 @@ angal.patient.note                                                              
 angal.patient.parenttogether                                                                           = Parents are together
 angal.patient.patientbrowser.title                                                                     = Patient Browser
 angal.patient.patientphoto                                                                             = Patient Photo
-angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
 angal.patient.patientphoto.error.filenotfound.msg                                                      = Patient photo file was not found.
+angal.patient.patientphoto.error.title                                                                 = Patient Photo Error
 angal.patient.patientselection.title                                                                   = Patient Selection
 angal.patient.photodeleted                                                                             = Deleted
 angal.patient.photonotdeleted                                                                          = Photo not deleted
@@ -1358,6 +1361,7 @@ angal.sql.thedatahasbeenupdatedbysomeoneelse.msg                                
 angal.sql.theselecteditemisstillusedsomewhere.msg                                                      = The selected item is still used somewhere.
 angal.stat.allIncomes                                                                                  = OH011A - Revenues, Incomes & Receivables (All)
 angal.stat.allIncomesmonth                                                                             = OH011C - Revenues, Incomes & Receivables (Month)
+angal.stat.allIncomesmonthward                                                                         = OH011D - Revenues, Incomes & Receivables (Ward / Month)
 angal.stat.allIncomespending                                                                           = OH011B - Revenues, Incomes & Receivables (Pending)
 angal.stat.april                                                                                       = April
 angal.stat.august                                                                                      = August
