Add link evidence in Bill Browser

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -197,6 +197,7 @@ angal.billbrowser.editbill                                                      
 angal.billbrowser.editbill.btn                                                                         = Edit Bill
 angal.billbrowser.editbill.btn.key                                                                     = E
 angal.billbrowser.fullreportallbills.txt                                                               = Full Report (all bills)
+angal.billbrowser.inout.col                                                                            = IN/OUT
 angal.billbrowser.lastpayment.col                                                                      = Last Payment
 angal.billbrowser.month.txt                                                                            = Month
 angal.billbrowser.newbill.btn                                                                          = New Bill
