--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -302,6 +302,7 @@ angal.common.note.title                                                         
 angal.common.note.txt                                                                                  = Note
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.opd.txt                                                                                   = OPD
 angal.common.patient.txt                                                                               = Patient
 angal.common.patientID                                                                                 = Pat. ID
 angal.common.pleaseinsertacode.msg                                                                     = Please insert a code.
