OP-875 link bill admission - gui (#1342)
* Add link evidence in Bill Browser

* Ignore data/ folder and private .properties and .pref

* Add admission evidence in Patietn Bill Edit

* Add "OPD" evidence and fix a bit the layout

* Enable detecting changes

* Enable detecting patient changes

* Standards names for static final

* Apply suggestions from code review

* Revert pom.xml

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -197,6 +197,7 @@ angal.billbrowser.editbill                                                      
 angal.billbrowser.editbill.btn                                                                         = Edit Bill
 angal.billbrowser.editbill.btn.key                                                                     = E
 angal.billbrowser.fullreportallbills.txt                                                               = Full Report (all bills)
+angal.billbrowser.inout.col                                                                            = IN/OUT
 angal.billbrowser.lastpayment.col                                                                      = Last Payment
 angal.billbrowser.month.txt                                                                            = Month
 angal.billbrowser.newbill.btn                                                                          = New Bill
@@ -301,6 +302,7 @@ angal.common.note.title                                                         
 angal.common.note.txt                                                                                  = Note
 angal.common.ok.btn                                                                                    = OK
 angal.common.ok.btn.key                                                                                = O
+angal.common.opd.txt                                                                                   = OPD
 angal.common.patient.txt                                                                               = Patient
 angal.common.patientID                                                                                 = Pat. ID
 angal.common.pleaseinsertacode.msg                                                                     = Please insert a code.
