--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -891,7 +891,8 @@ angal.menu.btn.examtype                                                         
 angal.menu.btn.generaldata                                                                             = Settings
 angal.menu.btn.groups                                                                                  = Groups
 angal.menu.btn.help                                                                                    = Help
-angal.menu.btn.logout                                                                                  = Logout
+angal.menu.logout.btn                                                                                  = Logout
+angal.menu.logout.btn.key                                                                              = L
 angal.menu.btn.hospital                                                                                = Hospital
 angal.menu.btn.labbrowsing                                                                             = Laboratory Browsing
 angal.menu.btn.laboratory                                                                              = Laboratory
