OP-846 Change "DICOM" to more general "Imaging"

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -106,7 +106,7 @@ angal.admission.patientfolder.admchart.btn.key                                  
 angal.admission.patientfolder.admission.txt                                                            = Admission
 angal.admission.patientfolder.btn                                                                      = Clinical Sheet
 angal.admission.patientfolder.btn.key                                                                  = S
-angal.admission.patientfolder.dicom.btn                                                                = DICOM
+angal.admission.patientfolder.dicom.btn                                                                = Imaging
 angal.admission.patientfolder.dicom.btn.key                                                            = I
 angal.admission.patientfolder.dischart.btn                                                             = Discharge Chart
 angal.admission.patientfolder.dischart.btn.key                                                         = S
@@ -365,24 +365,24 @@ angal.common.ward.txt                                                           
 angal.common.weight.txt                                                                                = Weight
 angal.common.years.txt                                                                                 = Years
 angal.dicom.afileinthefolderistoobigpleasesetdicommaxsizeindicomproperties.fmt.msg                     = A file in the folder is too big. Please set 'dicom.max.size' in dicom.properties ({0}).
-angal.dicom.delete.btn                                                                                 = Delete DICOM
+angal.dicom.delete.btn                                                                                 = Delete Image
 angal.dicom.delete.btn.key                                                                             = D
 angal.dicom.delete.no                                                                                  = No
 angal.dicom.delete.request                                                                             = Are you sure you want to delete the file?
 angal.dicom.delete.title                                                                               = Confirm Deletion
 angal.dicom.delete.yes                                                                                 = Yes
 angal.dicom.err                                                                                        = Error
-angal.dicom.dicomformatnotsupported.fmt.msg                                                            = DICOM format not supported: {0} 
+angal.dicom.dicomformatnotsupported.fmt.msg                                                            = Image format not supported: {0} 
 angal.dicom.image.frames                                                                               = Frames
-angal.dicom.image.patient.dicom                                                                        = DICOM Patient
+angal.dicom.image.patient.dicom                                                                        = Imaging Patient
 angal.dicom.image.patient.oh                                                                           = Patient
 angal.dicom.image.serie.n                                                                              = Number series
 angal.dicom.image.studyid                                                                              = Study id
 angal.dicom.image.zoom                                                                                 = Zoom
-angal.dicom.load.btn                                                                                   = Load DICOM
+angal.dicom.load.btn                                                                                   = Load Image
 angal.dicom.load.btn.key                                                                               = L
 angal.dicom.loading                                                                                    = Loading...
-angal.dicom.open.txt                                                                                   = Open DICOM
+angal.dicom.open.txt                                                                                   = Open Image
 angal.dicom.thefileisinanunknownformat.fmt.msg                                                         = The file is in an unknown format: {0}.
 angal.dicom.thefileisnotindicomformat.fmt.msg                                                          = The file is not in DICOM format: {0}.
 angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty.fmt.msg                                       = The file is too big. Please set 'dicom.max.size' into dicom.properties ({0})
@@ -393,15 +393,15 @@ angal.dicom.thumbnail.series                                                    
 angal.dicom.thumbnail.sernum                                                                           = Series number
 angal.dicom.thumbnail.study                                                                            = Study
 angal.dicom.unknownsizeformatpleasesetdicommaxsizeproperty.fmt.msg                                     = Unknown size format, please set 'dicom.max.size' value in dicom.properties ({0}).
-angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                                         = Error with the DICOM implementation class: {0}.
+angal.dicommanager.errorwiththedicomimplmentationclass.fmt.msg                                         = Error with the Imaging implementation class: {0}.
 angal.dicommanager.genericerror.fmt.msg                                                                = Generic error: {0}
-angal.dicomtype.delete.fmt.msg                                                                         = Delete DICOM type: "{0}"?
-angal.dicomtype.dicomtypebrowser.title                                                                 = DICOM Type Browser
-angal.dicomtype.editdicomtype.title                                                                    = Edit DICOM Type
-angal.dicomtype.newdicomtype.title                                                                     = New DICOM Type
+angal.dicomtype.delete.fmt.msg                                                                         = Delete Imaging type: "{0}"?
+angal.dicomtype.dicomtypebrowser.title                                                                 = Imaging Type Browser
+angal.dicomtype.editdicomtype.title                                                                    = Edit Imaging Type
+angal.dicomtype.newdicomtype.title                                                                     = New Imaging Type
 angal.dicomview.frames.title                                                                           = Frames
 angal.dicomview.zoom.title                                                                             = Zoom
-angal.dicomviewer.title                                                                                = DICOM Viewer
+angal.dicomviewer.title                                                                                = Imaging Viewer
 angal.disctype.codem                                                                                   = Code
 angal.disctype.deleterow.fmt.msg                                                                       = Delete discharge type: "{0}"?
 angal.disctype.dischargetypebrowser.title                                                              = Discharge Type Browser
@@ -879,8 +879,8 @@ angal.menu.btn.btnpharmstockdischarge                                           
 angal.menu.btn.chat                                                                                    = Communication
 angal.menu.btn.deliverytype                                                                            = Delivery Type
 angal.menu.btn.delresulttype                                                                           = Delivery Result Type
-angal.menu.btn.dicom                                                                                   = DICOM Patient
-angal.menu.btn.dicomtype                                                                               = DICOM Type
+angal.menu.btn.dicom                                                                                   = Imaging Patient
+angal.menu.btn.dicomtype                                                                               = Imaging Type
 angal.menu.btn.disctype                                                                                = Discharge Type
 angal.menu.btn.disease                                                                                 = Disease
 angal.menu.btn.diseaselist                                                                             = Disease List
