OP-701 - user logout and automatic logout (#1347)
* feat: manual and automatic login

* feat: show only login window

* fix: alternative solution to keep sesion alive and increase performance

* chore: code formatting

* chore: fix formatting

* refactor

* refactor

* feat: added logout keyboard listener

* refactor

* chore: added license header

* refactor

* fix: dispose jframe

* refactor

* fix: code review

* chroe: fix review point

* fix: code review

* fix: logout button visible in signle/multi user mode

* fix:code review

* fix: code review

* fix: code review

* fix: code review

* fix: code review

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -891,6 +891,8 @@ angal.menu.btn.examtype                                                         
 angal.menu.btn.generaldata                                                                             = Settings
 angal.menu.btn.groups                                                                                  = Groups
 angal.menu.btn.help                                                                                    = Help
+angal.menu.logout.btn                                                                                  = Logout
+angal.menu.logout.btn.key                                                                              = L
 angal.menu.btn.hospital                                                                                = Hospital
 angal.menu.btn.labbrowsing                                                                             = Laboratory Browsing
 angal.menu.btn.laboratory                                                                              = Laboratory
