--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -355,6 +355,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                                            = %
 angal.common.update.btn                                                                                = Update
 angal.common.update.btn.key                                                                            = U
+angal.common.user                                                                                      = User
 angal.common.userid.label                                                                              = User:
 angal.common.ward.txt                                                                                  = Ward
 angal.common.weight.txt                                                                                = Weight
