OP-1002 Add conditional userid column to medical stock movement window
condition: SINGLEUSER=yes -> hide column

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -360,6 +360,7 @@ angal.common.uom.mmHg                                                           
 angal.common.uom.percentage                                                                            = %
 angal.common.update.btn                                                                                = Update
 angal.common.update.btn.key                                                                            = U
+angal.common.userid                                                                                    = User
 angal.common.userid.label                                                                              = User:
 angal.common.ward.txt                                                                                  = Ward
 angal.common.weight.txt                                                                                = Weight
