OP-979 Change "New Admittance" for OPD into "New Attendance" (#1493)

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1065,7 +1065,7 @@ angal.newbill.youcannotdeletepastpayments.msg                                   
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
 angal.opd.allwards.txt                                                                                 = All Wards
-angal.opd.attendancedate.txt                                                                           = Admittance Date
+angal.opd.attendancedate.txt                                                                           = Attendance Date
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Delete the following opd?\n\nRegistration Date: {0}\nDisease: {1}\nAge: {2} Sex: {3}\nVisit Date: {4}
@@ -1090,7 +1090,7 @@ angal.opd.insertavalidage.msg                                                   
 angal.opd.lastopdnote.txt                                                                              = Note
 angal.opd.lastopdvisitm.txt                                                                            = LAST OPD VISIT
 angal.opd.new.btn                                                                                      = New
-angal.opd.newattendance.txt                                                                            = New Admittance
+angal.opd.newattendance.txt                                                                            = New Attendance
 angal.opd.newopdregistration.title                                                                     = New OPD Registration
 angal.opd.nextofkin.txt                                                                                = Next of Kin
 angal.opd.nextvisitdate.txt                                                                            = Next visit date
@@ -1108,8 +1108,8 @@ angal.opd.patientcode.fmt.msg                                                   
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
 angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
-angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an admittance date.
-angal.opd.pleaseinsertavalidattendancedate.msg                                                         = Please insert a valid admittance date.
+angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an attendance date.
+angal.opd.pleaseinsertavalidattendancedate.msg                                                         = Please insert a valid attendance date.
 angal.opd.pleaseinsertthepatientsage.msg                                                               = Please insert the patient's age.
 angal.opd.pleaseselectadisease.msg                                                                     = Please select a disease.
 angal.opd.pleaseselectpatientssex.msg                                                                  = Please select the patient's sex.
