--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -612,7 +612,7 @@ angal.labnew.tooltip.removepatientassociationwiththisexam                       
 angal.login.password.label                                                                             = Password:
 angal.login.passwordisincorrectpleaseretry.msg                                                         = The password is incorrect; please retry.
 angal.login.title                                                                                      = Login
-angal.mainmenu.fmt.title                                                                               = User: {0}
+angal.mainmenu.username.fmt                                                                            = User: {0}
 angal.malnutrition.controldatemustbeaftervisitdate.msg                                                 = The control date must be after the visit date.
 angal.malnutrition.dateconf.col                                                                        = Approval Date
 angal.malnutrition.dateofthenextcontrol                                                                = Date of the next control
